fixed the header on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -62,7 +62,7 @@ body {
 
 .watchlist-title {
     position: absolute;
-    top: 170px;
+    top: 190px;
     left: 50%;
     transform: translateX(-50%);
     font-size: 45px;
